--- a/MovieDB/index.html
+++ b/MovieDB/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="moviedb">
+<html lang="en" ng-app="moviedb" ng-controller="AppController">
 <head>
 	<meta charset="UTF-8">
-	<title>MovieDB</title>
+	<title>{{model.title}}</title>
 	<link rel="stylesheet" href="dist/style.css" type="text/css">
 </head>
 <body>
@@ -15,19 +15,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Movie DB</a>
+                <a class="navbar-brand" href="#/">Movie DB</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li ng-class="getClassForItem('movies')">
-                        <a href="#" ng-click="setSelectedItem('movies')">Movies</a>
+                        <a href="#/movies" ng-click="setSelectedItem('movies')">Movies</a>
                     </li>
                     <li ng-class="getClassForItem('series')">
-                        <a href="#" ng-click="setSelectedItem('series')">Series</a>
+                        <a href="#/series" ng-click="setSelectedItem('series')">Series</a>
                     </li>
                     <li ng-class="getClassForItem('people')">
-                        <a href="#" ng-click="setSelectedItem('people')">People</a>
+                        <a href="#people" ng-click="setSelectedItem('people')">People</a>
                     </li>
                 </ul>
             </div>
@@ -38,7 +38,13 @@
     </nav>
 
 
-
+	<dic class="container">
+		<div class="row">
+			<div class="col-xs-12">
+				<div ng-view></div>	
+			</div>
+		</div>
+	</dic>
 	
 
 
