--- a/MovieDB/index.html
+++ b/MovieDB/index.html
@@ -20,31 +20,30 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li ng-class="getClassForItem('movies')">
-                        <a href="#/movies" ng-click="setSelectedItem('movies')">Movies</a>
+                    <li ng-class="getClassForItem('/movies')">
+                        <a href="#/movies">Movies</a>
                     </li>
-                    <li ng-class="getClassForItem('series')">
-                        <a href="#/series" ng-click="setSelectedItem('series')">Series</a>
+                    <li ng-class="getClassForItem('/series')">
+                        <a href="#/series">Series</a>
                     </li>
-                    <li ng-class="getClassForItem('people')">
-                        <a href="#people" ng-click="setSelectedItem('people')">People</a>
+                    <li ng-class="getClassForItem('/people')">
+                        <a href="#people">People</a>
                     </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
-        Selected item:{{model.selectedItem}}
     </nav>
 
 
-	<dic class="container">
+	<div class="container">
 		<div class="row">
 			<div class="col-xs-12">
 				<div ng-view></div>	
 			</div>
 		</div>
-	</dic>
+	</div>
 	
 
 
