--- a/MovieDB/index.html
+++ b/MovieDB/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="moviedb" ng-controller="AppController">
 <head>
-	<meta charset="UTF-8">
-	<title>{{model.title}}</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<title ng-bind-html="model.title">MOVIEDB</title>
 	<link rel="stylesheet" href="dist/style.css" type="text/css">
 </head>
 <body>
